changed a few things

--- a/PML-project.Rmd
+++ b/PML-project.Rmd
@@ -5,9 +5,8 @@ output:
       html_document:
             keep_md: true
 ---
-Note: the github repo for this project is available at https://github.com/89million/PML-course-project
 
-This is the course project for Coursera's Practical Machine Learning class. The goal of the project is to create a machine learning algorithm which can predict the quality [on a scale of A-E] of how an exercise is done using measurements from accelerometers on the belt, forearm, arm and dumbell of 6 participants.
+This is the course project for Coursera's Practical Machine Learning class. The goal of the project is to create a machine learning algorithm which can predict the quality [on a scale of A-E] of how a barbell lift exercise was done using measurements from accelerometers on the belt, forearm, arm and dumbell of 6 participants.
 
 We'll start by loading the packages we'll need and the data we'll be using into R. The source for this data is available here; http://groupware.les.inf.puc-rio.br/har
 
@@ -88,37 +87,45 @@ At first glance these plots look acceptable. If we think reducing some predictor
 
 #Training the Model
 
-We'll use the caret package to split our data into new train and test subsets of the original training data. The new training set will consist of a randomly sampled 70% of the original training data. The remainder will be our new test set. Then we'll build a randomForest model and train it using 10-fold cross validation. Choosing 10 folds should be sufficient to prevent model over-fitting without increasing the variance too much as is possible with leave-one-out CV. 
+We'll use the caret package to split our data into new train and test subsets of the original training data. The new training set will consist of 60% of the original data, randomly sampled. The remainder will be our new test set. Then we'll build a randomForest model and train it using 10-fold cross validation. Choosing 10 folds should be sufficient to prevent model over-fitting without increasing the variance too much as is possible with leave-one-out CV. 
 
 ```{r}
 # partition new training and test data
 set.seed(10)
-inTrain <- createDataPartition(train$classe, p=.7, list=FALSE)
+inTrain <- createDataPartition(train$classe, p=.6, list=FALSE)
 xTrain <- train[inTrain,]
 xTest <- train[-inTrain,]
 
-# use 5 fold cross validation to train the model
+# use 10 fold cross validation to train the model
 fitControl <- trainControl(
       method = "cv",
       number = 10)
 
 # fit the model to xTrain subset
+set.seed(20)
 fit <- train(classe ~., method='rf', ntree=100, trControl=fitControl, data=xTrain)
+```
+
+#Model Results
+
+Let's see how the model performed. One of the benefits of the randomForest algorithm is an accurate estimate for the error rate using bootstrap samples. 
+
+```{r}
 fit$finalModel
 ```
 
-The predicted accuracy of this model is very high according to the Out-of-Bag estimate. We'll use our test subset to verify the accuracy. 
+The predicted accuracy of this model is over 99% according to the Out-of-Bag error estimate which is just a fraction of 1%. We'll use our test subset to verify the accuracy. 
 
 ```{r}
 # predict values on xTest subset
 preds <- predict(fit$finalModel, newdata = xTest)
 cMat <- confusionMatrix(preds, xTest$classe)
 cMat
+# remove scientific notation and create accuracy variables to populate below
+options(scipen = 999)
+acc <- round(cMat[[3]][1], 4)
+lower.acc <- round(cMat[[3]][3], 4)
+upper.acc <- round(cMat[[3]][4], 4)
 ```
 
-This seems to confirm our original estimates. The 95% confidence interval for accuracy is between `r round(cMat[[3]][3],4)` and `r round(cMat[[3]][4], 4)`. 
-
-```{r}
-# predict classe for the original coursera test set
-test.predictions <- predict(fit$finalModel, newdata=test)
-```
+This seems to confirm our original estimates. The 95% confidence interval for accuracy is between `r lower.acc` and `r upper.acc`. This corresponds to an error rate of `r acc` with an interval of `r 1- lower.acc` to `r 1 - upper.acc`.
